add hero in index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </ul>
     </header>
     <div class="hero">
-        <div></div>
+        <div class="hero-title">This website is awesome</div>
+        <div class="hero subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+        <button class="Sign-up-button">Sign up</button>
+        <div class="placeholder-image">This is a placeholder for an image</div>
     </div>
 </body>
 </html>
