--- a/index.html
+++ b/index.html
@@ -10,17 +10,50 @@
 <body>
     <header>
         <div class="logo">Header Logo</div>
-        <ul>
-            <li><a href="link1">header link one</a></li>
-            <li><a href="link2">header link two</a></li>
-            <li><a href="link3">header link three</a></li>
-        </ul>
+        <div class="header-links">
+            <div>header link one</div>
+            <div>header link two</div>
+            <div>header link three</div>
+        </div>
     </header>
     <div class="hero">
-        <div class="hero-title">This website is awesome</div>
-        <div class="hero subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-        <button class="Sign-up-button">Sign up</button>
-        <div class="placeholder-image">This is a placeholder for an image</div>
+        <div class="hero-left"> 
+            <div class="hero-maintext">This website is awesome</div>
+            <div class="hero-subtext">This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button class="sign-up1">Sign up</button>
+        </div>   
+        <div class="hero-right">This is a placeholder for an image</div>
+    </div>
+    <div class="info-header">Some random information.</div>
+    <div class="info-container">
+        <div class="info-tile"></div>
+        <div class="info-tile"></div>
+        <div class="info-tile"></div>
+        <div class="info-tile"></div>
+    </div>
+    <div class="infotext-container">
+        <div class="infotext">This is some subtext under an illustration or image</div>
+        <div class="infotext">This is some subtext under an illustration or image</div>
+        <div class="infotext">This is some subtext under an illustration or image</div>
+        <div class="infotext">This is some subtext under an illustration or image</div>
+    </div>
+    <div class="quote-container">
+        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quoter">-Thor, God of Thunder</div>
+    </div>
+    <div class="call-to-action">
+        <div class="cta-container">
+            <div class="cta-container-right">
+                <div class="cta-header">Call to action! It's time!</div>
+                <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="cta-container-left">
+                <button class="sign-up2">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-text">Copyright © The Odin Project 2022</div>
     </div>
 </body>
 </html>
